--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,59 +1,57 @@
 {
-  "extends": [
-    "airbnb",
+	"extends": [
+		"airbnb",
+		"eslint:recommended",
+		"plugin:eslint-comments/recommended",
 		"plugin:import/errors",
 		"plugin:import/warnings",
 		"plugin:prettier/recommended",
-    "prettier"
-  ],
-  "plugins": [
-    "prettier",
-    "import",
+		"prettier"
+	],
+	"plugins": [
+		"import",
+		"prettier",
 		"react",
 		"jsx-a11y",
 		"react-hooks"
-  ],
-  "env": {
-    "browser": true
-  },
-  "rules": {
-    "prettier/prettier": [
-      "error"
-    ],
-    "no-use-before-define": "off",
-    "no-case-declarations": "off",
-    "no-underscore-dangle": "off",
-    "react/jsx-filename-extension": "off",
-    "no-param-reassign": "off",
-    "no-empty": "warn",
-    "import/no-extraneous-dependencies": [
-      "error",
-      {
-        "devDependencies": true
-      }
-    ],
-    "react/jsx-props-no-spreading": "warn",
-    "react/no-unescaped-entities": [
-      "error",
-      {
-        "forbid": [
-          ">",
-          "}"
-        ]
-      }
-    ],
-    "jsx-a11y/label-has-associated-control": [
-      "warn",
-      {
-        "depth": 3
-      }
-    ],
-    "react-hooks/exhaustive-deps": "error",
-    "react-hooks/rules-of-hooks": "error"
-  },
-  "parser": "babel-eslint",
-  "parserOptions": {
-    "sourceType": "module",
-    "allowImportExportEverywhere": true
-  }
+	],
+	"env": {
+		"browser": true
+	},
+	"rules": {
+		"prettier/prettier": ["warn"],
+		"no-use-before-define": "off",
+		"no-case-declarations": "off",
+		"no-underscore-dangle": "off",
+		"react/jsx-filename-extension": "off",
+		"no-param-reassign": "off",
+		"no-empty": "warn",
+		"import/no-extraneous-dependencies": [
+			"error",
+			{
+				"devDependencies": true
+			}
+		],
+		"react/jsx-props-no-spreading": "warn",
+		"react/no-unescaped-entities": [
+			"error",
+			{
+				"forbid": [">", "}"]
+			}
+		],
+		"jsx-a11y/label-has-associated-control": [
+			"warn",
+			{
+				"depth": 3
+			}
+		],
+		"react-hooks/exhaustive-deps": "error",
+		"react-hooks/rules-of-hooks": "error",
+		"no-console": 2
+	},
+	"parser": "babel-eslint",
+	"parserOptions": {
+		"sourceType": "module",
+		"allowImportExportEverywhere": true
+	}
 }
