--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,11 @@
 {
-  "singleQuote": true
+	"tabWidth": 2,
+	"useTabs": true,
+	"trailingComma": "all",
+	"arrowParens": "always",
+	"singleQuote": true,
+	"jsxSingleQuote": true,
+	"bracketSameLine": true,
+	"endOfLine": "auto",
+	"printWidth": 80
 }
