--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "react/jsx-filename-extension": "off",
     "no-param-reassign": "off",
     "no-empty": "warn",
+    "no-var": 1,
     "import/no-extraneous-dependencies": [
       "error",
       {
