--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,6 +58,12 @@
     ],
     "react-hooks/exhaustive-deps": "error",
     "react-hooks/rules-of-hooks": "error",
-    "no-console": 2
+    "no-console": 2,
+    "eslint-comments/no-use": [
+      1,
+      {
+        "allow": []
+      }
+    ]
   }
 }
