--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -52,6 +52,7 @@
     "one-var": 1,
     "no-plusplus": 2,
     "eqeqeq": 2,
-    "no-nested-ternary": 1
+    "no-nested-ternary": 1,
+    "no-restricted-globals": 2
   }
 }
