--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -63,7 +63,10 @@
     "jsx-quotes": 1,
     "react/jsx-tag-spacing": 1,
     "react/jsx-curly-spacing": 1,
+    "react/jsx-boolean-value": 1,
     "react/no-array-index-key": 2,
-    "react/no-string-refs": 2
+    "react/no-string-refs": 2,
+    "react/jsx-wrap-multilines": 1,
+    "react/self-closing-comp": 1
   }
 }
